--- a/src/pages/weather/weather.scss
+++ b/src/pages/weather/weather.scss
@@ -1,8 +1,35 @@
-.scrollable {
-    ion-scroll {
-        .scroll-content {
-            height: 340px;
-            padding: 0 !important;
+.weather {
+
+    background-color: #99ebff;
+
+    .current {
+        .temperature {
+            font-size: 5em;
+            font-weight: bold;
+            color: #fff;
+            text-shadow: 1px 1px 2px #8e8e8e;
+        }
+
+        .humidity, .feelslike, .wind {
+            font-size: 20px;
+            font-weight: bold;
+            color: #fff;
+            text-shadow: 1px 1px 2px #8e8e8e;
+        }
+    }
+    .scroll-content {
+        padding: 0 !important;
+    }
+
+    .scrollable {
+        ion-scroll {
+            .scroll-content {
+                height: 390px;
+
+                .item.item-block.item-md {
+                    background-color: transparent;
+                }
+            }
         }
     }
 }
