--- a/src/pages/weather/weather.scss
+++ b/src/pages/weather/weather.scss
@@ -3,9 +3,12 @@
     background-color: #99ebff;
 
     .current {
+        position: fixed;
         font-weight: bold;
         color: #fff;
         text-shadow: 1px 1px 2px #8e8e8e;
+        background-color: rgba(153, 235, 255, 1);
+        z-index: 1;
 
         .temperature {
             font-size: 5em;
@@ -15,19 +18,16 @@
             font-size: 20px;
         }
     }
+
     .scroll-content {
         padding: 0 !important;
     }
 
-    .scrollable {
-        ion-scroll {
-            .scroll-content {
-                height: 390px;
-
-                .item.item-block.item-md {
-                    background-color: transparent;
-                }
-            }
+    .forecast {
+        ion-row{
+            .item.item-block.item-md {
+                background-color: transparent;
+            }    
         }
     }
 }
