--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,15 +1,7 @@
-.home {
-    background-color: #f8f8f8;
-
-    button {
-        margin-bottom: 3px;
-        box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 
-                    0 3px 1px -2px rgba(0, 0, 0, 0.2), 
-                    0 1px 5px 0 rgba(0, 0, 0, 0.12);
-        &.item-md.item-block {
-            .item-inner {
-                border-bottom: none;
-            }
+ion-header {
+    ion-toolbar {
+        .toolbar-background {
+            background-color: white;
         }
     }
 }
