--- a/src/components/forecast-item/forecast-item.component.html
+++ b/src/components/forecast-item/forecast-item.component.html
@@ -2,7 +2,7 @@
     <ion-avatar item-left>
         <img [src]="hour.condition.icon">
     </ion-avatar>
-    <h5>{{ hour.hour }}</h5>
+    <p>{{ hour.hour }}</p>
     <p>Temperature {{ hour.temp_c }}º</p>
     <p>Humidity {{ hour.humidity }}%</p>
 </ion-item>
