--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -69,8 +69,51 @@ $colors: (
 // The premium icon font for Ionic. For more info, please see:
 // http://ionicframework.com/docs/v2/ionicons/
 
-@import "ionic.ionicons";
+$ionicons-font-path: "../assets/fonts";
 
+// In order to make icons work and not break ionic icons, change ionic.ionicons to ionicons
+// @import "ionic.ionicons";
+@import "ionicons";
+
+@font-face {
+  font-family: 'icomoon';
+  src:  url('../assets/fonts/icomoon.eot?ylnu31');
+  src:  url('../assets/fonts/icomoon.eot?ylnu31#iefix') format('embedded-opentype'),
+    url('../assets/fonts/icomoon.ttf?ylnu31') format('truetype'),
+    url('../assets/fonts/icomoon.woff?ylnu31') format('woff'),
+    url('../assets/fonts/icomoon.svg?ylnu31#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+@mixin makeIcon($arg, $val) {
+  .ys-#{$arg}:before ,
+  .ion-ios-ys-#{$arg}:before ,
+  .ion-ios-ys-#{$arg}-outline:before ,
+  .ion-md-ys-#{$arg}:before ,
+  .ion-md-ys-#{$arg}-outline:before  {
+    content: $val;
+    font-size: 26px;
+  }
+}
+
+
+@include makeIcon(sunrise, '\e900');
 
 // Fonts
 // --------------------------------------------------
