--- a/src/pages/weather/weather.scss
+++ b/src/pages/weather/weather.scss
@@ -62,5 +62,9 @@
                 border-right: none;
             }
         }
+
+        .icon.icon-md.ion-md-water {
+            font-size: 26px;
+        }
     }
 }
