--- a/src/pages/weather/weather.scss
+++ b/src/pages/weather/weather.scss
@@ -51,7 +51,7 @@
         }
     }
 
-    .more-info {
+    .more-info, .astro-info {
         background-color: rgba(255,255,255,0.2);
         margin-top: 5px;
         
