Updated weather styles II

--- a/src/pages/weather/weather.scss
+++ b/src/pages/weather/weather.scss
@@ -1,83 +1,91 @@
-.weather-header {
-    ion-navbar {
-        .back-button {
-            z-index: 9;
-        }
-
-        .toolbar-content {
-            width: 100%;
-            position: absolute;
-        }
-    }
-}
-
-.weather {
-    background-image: url('../assets/img/sunny.jpg');
-    background-size: cover;
-    background-position: 0 0;
-    background-repeat: no-repeat;
-
-    .current-info {
-        ion-col {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        .temperature-col {
-            align-items: flex-end;
-
-            .temperature {
-                font-size: 10rem;
+weather-page {
+    
+    .weather-header {
+        background: rgba(0, 0, 0, 0.2);
+        ion-navbar {
+            .back-button {
+                z-index: 9;
             }
-        }
 
-        .icon-col {
-            align-items: flex-start;
-
-            .celsius-icon {
-                &::before {
-                    font-size: 7rem;   
-                }
-            }
-        }
-
-        .condition-text {
-            .weather-icon {
-                &::before {
-                    font-size: 1.5rem;   
-                }
+            .toolbar-content {
+                width: 100%;
+                position: absolute;
             }
         }
     }
 
-    .more-info, .astro-info {
-        background-color: rgba(255,255,255,0.2);
-        margin-top: 5px;
-        
-        ion-col {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            border-right: 1px solid;
+    .weather {
+        background-image: url('../assets/imgs/sunny.jpg');
+        background-size: cover;
+        background-position: 0 0;
+        background-repeat: no-repeat;
 
-            &:last-child() {
-                border-right: none;
-            }
+        .scroll-content {
+            background: rgba(0, 0, 0, 0.2);
         }
 
-        .icon.icon-md.ion-md-water {
-            font-size: 26px;
-        }
-    }
-
-    .forecast {
-        background-color: rgba(255,255,255,0.2);
-        margin-top: 5px;
-        
-        forecast-item {
-            .grid {
+        .current-info {
+            ion-col {
+                display: flex;
+                flex-direction: column;
                 align-items: center;
+            }
+
+            .temperature-col {
+                align-items: flex-end;
+
+                .temperature {
+                    font-size: 10rem;
+                }
+            }
+
+            .icon-col {
+                align-items: flex-start;
+
+                .celsius-icon {
+                    &::before {
+                        font-size: 7rem;   
+                    }
+                }
+            }
+
+            .condition-text {
+                .weather-icon {
+                    &::before {
+                        font-size: 1.5rem;   
+                    }
+                }
+            }
+        }
+
+        .more-info, .astro-info {
+            background-color: rgba(255,255,255,0.2);
+            margin-top: 5px;
+            
+            ion-col {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                border-right: 1px solid;
+
+                &:last-child() {
+                    border-right: none;
+                }
+            }
+
+            .icon.icon-md.ion-md-water {
+                font-size: 26px;
+            }
+        }
+
+        .forecast {
+            background-color: rgba(255,255,255,0.2);
+            margin-top: 5px;
+            
+            forecast-item {
+                .grid {
+                    align-items: center;
+                }
             }
         }
     }
