--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -8,9 +8,26 @@ home-page {
 
         .no-results {
             color: white;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
 
             p {
                 font-style: italic;
+                font-weight: 600;
+            }
+        }
+
+        ion-item {
+            &.item.item-block {
+                background-color: transparent;
+                color: white;
+
+                p {
+                    color: white;
+                }
             }
         }
     }
