--- a/src/components/forecast-item/forecast-item.component.html
+++ b/src/components/forecast-item/forecast-item.component.html
@@ -2,7 +2,7 @@
     <ion-row margin-bottom>
         {{ day.datetext }}
     </ion-row>
-    <ion-row margin-top>
+    <ion-row>
         {{ day.day.maxtemp_c }}/{{ day.day.mintemp_c }}
     </ion-row>
 </div>
