Fixed background img style for desktop

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -3,7 +3,7 @@ home-page {
     .home {
         background-image: url('../assets/imgs/background.png');
         background-size: cover;
-        background-position: 0 0;
+        background-position: 50% 50%;
         background-repeat: no-repeat;
 
         .no-results {
