--- a/src/pages/weather/weather.scss
+++ b/src/pages/weather/weather.scss
@@ -21,7 +21,7 @@ weather-page {
     .weather {
         background-image: url('../assets/imgs/background.png');
         background-size: cover;
-        background-position: 0 0;
+        background-position: 50% 50%;
         background-repeat: no-repeat;
 
         .scroll-content {
