--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,13 +1,9 @@
 home-page {
     
     .home {
-        background-image: url('../assets/imgs/background.png');
-        background-size: cover;
-        background-position: 50% 50%;
-        background-repeat: no-repeat;
+        background-color: #f0f0f0;
 
         .no-results {
-            color: white;
             width: 100%;
             height: 100%;
             display: flex;
@@ -23,11 +19,6 @@ home-page {
         ion-item {
             &.item.item-block {
                 background-color: transparent;
-                color: white;
-
-                p {
-                    color: white;
-                }
             }
         }
     }
