Minor changes II

--- a/src/components/result-item/result-item.component.html
+++ b/src/components/result-item/result-item.component.html
@@ -1,3 +1,2 @@
 <h2>{{ result.title }}</h2>
-<p>{{ result.region }}</p>
-<p>{{ result.country }}</p>
+<p>{{ result.region }}, {{ result.country }}</p>
